# squid

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .squidignore  .squidignore.example  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  PLAN.md  QUICKSTART.md  README.md  build.rs  docker-compose.yml  docker-setup.sh  package-lock.json  squid.config.example.json  squid.config.json  squid.config.json.example  squid.config.json.template  squid.config.test.json  test_config.json
.cursor/plans/: agent_architecture_migration_87fca075.plan.md  rag_integration_plan_e01358aa.plan.md
.github/: dependabot.yml
.github/workflows/: rust.yml
agents/: code-reviewer.md  general-assistant.md  light.md  pirate.md  shakespeare.md
crates/squid-plugins/: Cargo.toml  README.md
crates/squid-plugins/src/: context.rs  lib.rs  manager.rs  metadata.rs  path_policy.rs  registry.rs  runtime.rs  tests.rs  validator.rs
docs/: API.md  AUDIO_TRANSCRIPTION.md  CHANGELOG.md  CLI.md  EXAMPLES.md  FILE_CONTEXT.md  IMPLEMENTATION_SUMMARY.md  JOBS.md  PLUGINS.md  PROMPTS.md  QUICKSTART.md  RAG.md  RAG_CHECKLIST.md  RAG_DEFAULT_CONFIG.md  RAG_TESTING.md  README.md  REVIEW_GUIDE.md  SECURITY.md  SECURITY_APPROVAL.md  SQLITE_VEC_SETUP.md  STRUCTURE.md  TEMPLATE-VARIABLES.md  THINKING_STEPS_STORAGE.md  TOKEN_TRACKING.md  TUI_OPTIONS.md  UI_EXAMPLES.md  WEB_DEVELOPMENT.md
documents/: api-reference.md  getting-started.md  rag-guide.md  rust-examples.rs
examples/: README.md  example.css  example.html  example.ts  test-reviews.sh
migrations/: 001_initial_schema.sql  002_logs_table.sql  003_session_titles.sql  004_token_tracking.sql  005_context_window.sql  006_deduplicate_sources.sql  007_reasoning_column.sql  008_tool_invocations.sql  009_thinking_steps.sql  010_content_split_markers.sql  011_rag_vectors.sql  012_rename_model_to_agent.sql  013_agent_token_stats.sql  014_background_jobs.sql  015_job_timeout.sql  016_job_executions.sql
plugins/code-formatter/: index.js  plugin.json
plugins/http-fetcher/: index.js  plugin.json
plugins/markdown-linter/: index.js  plugin.json
sample-files/: README.md  agents-example.json  example.js  example.py  example.rs  sample.txt
src/: agent.rs  api.rs  audio.rs  bundled.rs  config.rs  db.rs  doctor.rs  envinfo.rs  init.rs  jobs.rs  jobs_api.rs  llm.rs  logger.rs  main.rs  rag.rs  server.rs  session.rs  template.rs  tokens.rs  tools.rs  validate.rs  workspace.rs
src/assets/: ask-prompt.md  code-review.md  env.md  model-metadata.json  persona.md  review-css.md  review-docker.md  review-go.md  review-html.md  review-java.md  review-makefile.md  review-md.md  review-py.md  review-rust.md  review-sh.md  review-sql.md  review-typescript.md  review-yaml.md  tools.md
src/assets/demo_docs/: example-project.md  getting-started.md  rag-guide.md
src/plugins/: context.rs  manager.rs  metadata.rs  mod.rs  registry.rs  runtime.rs  tests.rs  validator.rs
static/: index.html
tests/: README.md  test-bash.sh  test-config.sh  test-custom-prompt.sh  test-grep.sh  test-permissions.sh  test-prompt.md  test-rag.sh  test-reviews.sh  test-security.sh
web/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/ai-elements/: message.tsx  terminal.tsx
web/src/components/app/: BrainIcon.tsx  agent-item.tsx  agent-selector.tsx  agent-stats.test.tsx  agent-stats.tsx  agent-viewer.tsx  app-sidebar.test.tsx  app-sidebar.tsx  chatbot.tsx  document-manager.tsx  file-viewer.tsx  files-sidebar.tsx  job-create-dialog.tsx  job-details.tsx  landing-page.tsx  logs.test.tsx  logs.tsx  model-item.tsx  nav-user.test.tsx  nav-user.tsx  rag-query-panel.tsx  session-list.test.tsx  session-list.tsx  source-content-sidebar.tsx  suggestion-item.tsx  thinking-shimmer.test.tsx  thinking-shimmer.tsx  tool-approval.test.tsx  tool-approval.tsx
web/src/lib/: chat-api.ts  notification-sound.ts
web/src/stores/: agent-store.test.ts  agent-store.ts  chat-store.test.ts  chat-store.ts  config-store.test.ts  config-store.ts  job-store.test.ts  job-store.ts  model-store.ts  session-store.test.ts  session-store.ts
web/src/test/: setup.ts
workspace/: README.md
