[package]
name = "squid-rs"
version = "0.9.0"
description = "An AI-powered command-line tool for code reviews and suggestions."
repository = "https://github.com/DenysVuika/squid"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
keywords = ["ai", "code-review", "command-line", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = [
    "/src",
    "/static",
    "/migrations",
    "/.squidignore.example",
    "/squid.config.json.example",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[[bin]]
name = "squid"
path = "src/main.rs"

[dependencies]
actix-web = "4.13"
actix-files = "0.6"
actix-cors = "0.7"
async-openai = { version = "0.32", features = ["chat-completion"] }
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3"
indicatif = "0.18"
inquire = "0.9"
mime_guess = "2.0"
rust-embed = "8.5"
log = "0.4.29"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.1"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.5"
rusqlite = { version = "0.38.0", features = ["bundled", "load_extension"] }
tiktoken-rs = "0.9.1"
flate2 = "1.0"
sha2 = "0.10"
reqwest = { version = "0.13", features = ["json"] }
rig-core = "0.2"
notify = "6.0"
anyhow = "1.0"
sqlite-vec = "0.1"
