[package]
name = "squid-rs"
version = "0.13.1"
description = "An AI-powered command-line tool for code reviews and suggestions."
repository = "https://github.com/DenysVuika/squid"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
build = "build.rs"
keywords = ["ai", "code-review", "command-line", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = [
    "/src",
    "/static",
    "/migrations",
    "/documents",
    "/plugins",
    "/agents",
    "/docs",
    "/.squidignore.template",
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[[bin]]
name = "squid"
path = "src/main.rs"

[dependencies]
actix-web = "4.13"
actix-files = "0.6"
actix-cors = "0.7"
async-openai = { version = "0.34", features = ["chat-completion"] }
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3"
indicatif = "0.18"
inquire = "0.9"
mime_guess = "2.0"
rust-embed = "8.5"
log = "0.4.29"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.1"
tera = "1.20"
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
tokio-cron-scheduler = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono-tz = "0.10"
uuid = { version = "1.23", features = ["v4", "serde"] }
walkdir = "2.5"
rusqlite = { version = "0.39.0", features = ["bundled", "load_extension"] }
tiktoken-rs = "0.9.1"
flate2 = "1.0"
sha2 = "0.11"
reqwest = { version = "0.13", features = ["json"] }
rig-core = "0.34"
notify = "8.2"
anyhow = "1.0"
async-trait = "0.1"
sqlite-vec = "0.1"
rquickjs = { version = "0.11", features = ["full-async", "loader"] }
jsonschema = "0.45"
dirs = "6.0"
serde_yaml = "0.9"
tabled = "0.20.0"

[dev-dependencies]
tempfile = "3.0"
